# Stock-Screener-V1

./: README.md  requirements.txt
Complete Phase 1 Core Pine Engine Validation Guide/: C.pine  Cargo.toml  README.md  ast.rs  build.rs  comparison.rs  data.rs  data_fetcher.rs  environment.rs  error.rs  execution.rs  grammar.rs  integration_test.rs  lexer.rs  lib.rs  mod.rs  pasted_content.txt  pasted_content_2.txt  pine_engine.proto  server.rs  ta.rs  test_engine.rs  test_harness.rs  todo.md  value.rs
Python Engine 1/: mvp.py
Python MVP + Tests 1/: mvp_screener.py  test_mvp_screener.py
